--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1-3/int02-m5-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-1/int02-m5-1-3/int02-m5-1-3.component.html
@@ -33,9 +33,9 @@
             <i class="save icon"></i>
             บันทึก
           </button>
-          <button class="ui mini red button">
-            <i class="trash alternate icon"></i>
-            ลบ
+          <button class="ui mini button">
+            <i class="remove icon"></i>
+            ยกเลิก
           </button>
         </div>
       </div>
