--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -1,4 +1,4 @@
-<div class="ui grid">
+<!-- <div class="ui grid">
     <div class="sixteen wide column" id="breadcrumb">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">Breadcrumb</div>
         <div class="ui bottom attached segment">
@@ -23,4 +23,5 @@
             <ui-segments></ui-segments>
         </div>
     </div>
-</div>
+</div> -->
+<iframe src="http://150.95.24.42:8080/web-dashboard/" style="position: absolute; height: 90%; border: none"  width="100%"></iframe>
